style: add fonts, background color, logo, hover states for nav links

--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
           <img src="./images/favicon.svg" alt="J logo" class="nav__logo" />
           <ul class="nav__links">
             <li class="nav__link">About me</li>
-            <li class="nav__link">Language and Tools</li>
+            <li class="nav__link">Languages and Tools</li>
             <li class="nav__link">Projects</li>
           </ul>
         </nav>
       </header>
+      <section class="about-me"></section>
+      <section class="language-and-tools"></section>
+      <section class="projects"></section>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
