--- a/index.html
+++ b/index.html
@@ -25,8 +25,68 @@
           </ul>
         </nav>
       </header>
-      <section class="about-me"></section>
-      <section class="language-and-tools"></section>
+      <section class="about-me">
+        <div class="about-me__image-container">
+          <img
+            src="./images/about-me_image.jpg"
+            alt="About me image"
+            class="about-me__image"
+          />
+        </div>
+        <p class="about-me__description">
+          Hi! <br />
+          <br />
+          My name is Jess Sang. I am currently a Software Engineer student at
+          TripleTen. Prior to my time at TripleTen, I worked in aviation for
+          about 2 and a half years. My time in aviation was invaluable, but
+          ultimately, I decided that I wanted to pursue a career that would
+          further allow me to utilize my attention to detail, combined with
+          added aspects of creativity and building that aviation wasn't able to
+          provide.
+          <br />
+          <br />
+          Outside of work, my hobbies include rock climbing, travelling,
+          singing, immersing myself in film and, last but not least, spending
+          time with loved ones.
+        </p>
+      </section>
+      <section class="languages-and-tools">
+        <img
+          class="languages-and-tools__icons"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
+          alt="JavaScript icon"
+        />
+        <img
+          class="languages-and-tools__icons"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+          alt="HTML icon"
+        />
+        <img
+          class="languages-and-tools__icons"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
+          alt="CSS icon"
+        />
+        <img
+          class="languages-and-tools__icons"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg"
+          alt="Figma icon"
+        />
+        <img
+          class="languages-and-tools__icons"
+          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
+          alt="Git icon"
+        />
+        <img
+          class="languages-and-tools__icons"
+          src="https://img.icons8.com/glyph-neue/64/FFFFFF/github.png"
+          alt="GitHub icon"
+        />
+        <img
+          class="languages-and-tools__icons"
+          src="https://img.icons8.com/ios-filled/50/FFFFFF/discord-logo.png"
+          alt="Discord icon"
+        />
+      </section>
       <section class="projects"></section>
       <footer class="footer"></footer>
     </div>
