--- a/index.html
+++ b/index.html
@@ -73,43 +73,48 @@
         </div>
       </section>
       <section class="languages-and-tools" id="languages-and-tools-section">
-        <img
-          class="languages-and-tools__icons"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
-          alt="JavaScript icon"
-        />
-        <img
-          class="languages-and-tools__icons"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
-          alt="HTML icon"
-        />
-        <img
-          class="languages-and-tools__icons"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
-          alt="CSS icon"
-        />
-        <img
-          class="languages-and-tools__icons"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg"
-          alt="Figma icon"
-        />
-        <img
-          class="languages-and-tools__icons"
-          src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
-          alt="Git icon"
-        />
-        <img
-          class="languages-and-tools__icons"
-          src="https://img.icons8.com/glyph-neue/64/FFFFFF/github.png"
-          alt="GitHub icon"
-        />
-        <img
-          class="languages-and-tools__icons"
-          src="https://img.icons8.com/ios-filled/50/FFFFFF/discord-logo.png"
-          alt="Discord icon"
-        />
+        <h2 class="language-and-tools__heading">Languages and tools:</h2>
+        <div class="languages-and-tools__icons">
+          <img
+            class="languages-and-tools__icon"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
+            alt="JavaScript icon"
+          />
+          <img
+            class="languages-and-tools__icon"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+            alt="HTML icon"
+          />
+          <img
+            class="languages-and-tools__icon"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
+            alt="CSS icon"
+          />
+          <img
+            class="languages-and-tools__icon"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg"
+            alt="Figma icon"
+          />
+          <img
+            class="languages-and-tools__icon"
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
+            alt="Git icon"
+          />
+          <img
+            class="languages-and-tools__icon"
+            src="https://img.icons8.com/glyph-neue/64/FFFFFF/github.png"
+            alt="GitHub icon"
+          />
+          <img
+            class="languages-and-tools__icon"
+            src="https://img.icons8.com/ios-filled/50/FFFFFF/discord-logo.png"
+            alt="Discord icon"
+          />
+        </div>
       </section>
-      <section class="projects" id="projects-section"></section>
+      <section class="projects" id="projects-section">
+        <h2 class="projects__heading">Projects:</h2>
+      </section>
       <footer class="footer"></footer>
     </div>
   </body>
