feat: add about me modal - open/close btns

--- a/index.html
+++ b/index.html
@@ -33,12 +33,40 @@
           </ul>
         </nav>
       </header>
-      <div class="modal modal_open" id="about-me-modal">
+      <div class="modal" id="about-me-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
-          <p class="modal__text"></p>
+          <h2 class="modal__heading">About me:</h2>
+          <p class="modal__text">
+            Hi!
+            <br />
+            <br />
+            My name is Jess. I am currently a Software Engineer student at
+            TripleTen. Prior to my time at TripleTen, I worked in Aviation for
+            about 2 and a half years. My time in Aviation was invaluable, but
+            ultimately, I decided that I wanted to pursue a career that would
+            further allow me to utilize my attention to detail, combined with
+            added aspects of creativity and building that a career in Aviation
+            wasn't able to provide.
+            <br />
+            <br />
+            Outside of work, I hold passions for rock climbing, travelling,
+            singing, immersing myself in film, writing poetry, and - last but
+            not least - spending time with loved ones. I was born and raised in
+            Hong Kong, but come from a diverse family background. I have lived
+            in Cincinnati, OH, since 2016. In the time I've been here,
+            Cincinnati has become my new home.
+            <br />
+            <br />
+            As much as I love Cincinnati, a dream of mine is to explore more
+            that the United States has to offer. And I want to do so by spending
+            a few years moving from state-to-state; getting to experience the
+            vastness of culture and nature our country has to offer. Which is
+            why pursuing remote career opportunities is really important to me.
+          </p>
         </div>
       </div>
     </div>
+    <script defer src="./scripts/index.js"></script>
   </body>
 </html>
