style: modal transition/feature: langs and tools modal

--- a/index.html
+++ b/index.html
@@ -66,6 +66,65 @@
           </p>
         </div>
       </div>
+      <div class="modal" id="langs-and-tools-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+          <h2 class="modal__heading">Languages and tools:</h2>
+          <ul class="modal__list">
+            <li class="modal__list-item">JavaScript</li>
+            <li class="modal__list-item">HTML</li>
+            <li class="modal__list-item">CSS</li>
+            <li class="modal__list-item">Git</li>
+            <li class="modal__list-item">Visual Studio Code</li>
+            <li class="modal__list-item">Figma</li>
+            <li class="modal__list-item">GitHub</li>
+            <li class="modal__list-item">Discord</li>
+          </ul>
+          <div class="modal__langs-and-tools-icons">
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg"
+              alt="JavaScript icon"
+            />
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"
+              alt="HTML icon"
+            />
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"
+              alt="CSS icon"
+            />
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"
+              alt="Git icon"
+            />
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg"
+              alt="Visual Studio Code icon"
+            />
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg"
+              alt="Figma icon"
+            />
+
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              alt="GitHub icon"
+            />
+            <img
+              class="modal__languages-and-tools-icon"
+              src="https://cdn.prod.website-files.com/6257adef93867e50d84d30e2/636e0a69f118df70ad7828d4_icon_clyde_blurple_RGB.svg"
+              alt="Discord icon"
+            />
+          </div>
+        </div>
+      </div>
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
