--- a/index.html
+++ b/index.html
@@ -41,28 +41,17 @@
             Hi!
             <br />
             <br />
-            My name is Jess. I am currently a Software Engineer student at
-            TripleTen. Prior to my time at TripleTen, I worked in Aviation for
-            about 2 and a half years. My time in Aviation was invaluable, but
-            ultimately, I decided that I wanted to pursue a career that would
-            further allow me to utilize my attention to detail, combined with
-            added aspects of creativity and building that a career in Aviation
-            wasn't able to provide.
-            <br />
-            <br />
-            Outside of work, I hold passions for rock climbing, travelling,
-            singing, immersing myself in film, writing poetry, and - last but
-            not least - spending time with loved ones. I was born and raised in
-            Hong Kong, but come from a diverse family background. I have lived
-            in Cincinnati, OH, since 2016. In the time I've been here,
-            Cincinnati has become my new home.
-            <br />
-            <br />
-            As much as I love Cincinnati, a dream of mine is to explore more
-            that the United States has to offer. And I want to do so by spending
-            a few years moving from state-to-state; getting to experience the
-            vastness of culture and nature our country has to offer. Which is
-            why pursuing remote career opportunities is really important to me.
+            My name is Jess, and I'm a Software Engineer student at TripleTen.
+            Prior to my time at TripleTen, I worked in Aviation for 2 and a half
+            years. My time in aviation was invaluable; I had the opportunity to
+            use analytical and technical knowledge to approve flight plans for
+            our aircraft, as well as practice teamwork and communication with
+            our staff of dispatchers, pilots, and flight attendants. But
+            ultimately, I decided to pursue a career that would further allow me
+            to utilize not just my attention to detail, but also accessing
+            aspects of creativity and engineering that a career in Aviation
+            wasn't able to provide me. And I strongly believe that I can find
+            that in Software Engineering.
           </p>
         </div>
       </div>
