--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             our aircraft, as well as practice teamwork and communication with
             our staff of dispatchers, pilots, and flight attendants. But
             ultimately, I decided to pursue a career that would further allow me
-            to utilize not just my attention to detail, but also access pieces
-            of creativity and engineering that a career in Aviation wasn't able
-            to provide me. And I strongly believe that I can find that in
-            Software Engineering.
+            to utilize not just my attention to detail, but also aspects of
+            creativity and engineering that a career in Aviation wasn't able to
+            provide me. And I strongly believe that I can find that in Software
+            Engineering.
           </p>
         </div>
       </div>
