fix capitalization of some words

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <br />
             My name is Jess, and I'm a Software Engineer student at TripleTen.
             Prior to my time at TripleTen, I worked in Aviation for 2 and a half
-            years. My time in aviation was invaluable; I had the opportunity to
+            years. My time in Aviation was invaluable; I had the opportunity to
             use analytical and technical knowledge to approve flight plans for
             our aircraft, as well as practice teamwork and communication with
-            our staff of dispatchers, pilots, and flight attendants. But
+            our staff of Dispatchers, Pilots, and Flight Attendants. But
             ultimately, I decided to pursue a career that would further allow me
             to utilize not just my attention to detail, but also aspects of
             creativity and engineering that a career in Aviation wasn't able to
